fix tab bar alignment to not have a gap below

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,8 +81,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: calc(var(--tabbar-height) + env(safe-area-inset-bottom, 0px));
-  padding-bottom: env(safe-area-inset-bottom, 0px);
+  height: calc(var(--tabbar-height));
   display: flex;
   align-items: center;
   justify-content: space-around;
